--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>What's Poppin'</title>
-  <link rel="icon" type="image/jpeg" href="logo.jpeg">
+  <link rel="icon" type="image/jpeg" href="logo.jpg">
   <!-- Chrome Built-in WRITER-API AI Origin Trial tokens -->
   <meta http-equiv="origin-trial" content="Amba/61pLfwOc6XAIqSOtgsQOYAR+oWLj3DAFRzDB1Yk/zKQC9FqP6Z4I87NwXKA5AL3QDYcelfqJcF7+yYViwsAAABOeyJvcmlnaW4iOiJodHRwOi8vMTI3LjAuMC4xOjU1MDAiLCJmZWF0dXJlIjoiQUlXcml0ZXJBUEkiLCJleHBpcnkiOjE3NzY3Mjk2MDB9">
   <!-- Chrome Built-in REWRITER-API AI Origin Trial tokens -->
@@ -65,3 +65,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
